Fixed break at 400px and fixed extra right margin for contact-item

--- a/css/style.css
+++ b/css/style.css
@@ -491,7 +491,7 @@ p {
 	margin-bottom: 70px;
 }
 #contact .contact-items {
-	width: 400px;
+	width: 100%;
 }
 #contact .contact-item {
 	width: 80%;
@@ -499,7 +499,7 @@ p {
 	text-align: center;
 	border-radius: 10px;
 	padding: 30px;
-	margin: 30px;
+	margin: 30px auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
